--- a/styles.css
+++ b/styles.css
@@ -1,59 +1,64 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
 *{
   margin: 0;
   padding: 0;  
   box-sizing: border-box;
+  font-family: "Montserrat", sans-serif;
 }
 
 body{
-    background: #ff4b1f;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #ff9068, #ff4b1f);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #ff9068, #ff4b1f); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-font-size: 12px;
-font-family: Arial, Helvetica, sans-serif;
+height: 100vh;
+display: flex;
+align-items: center;
+justify-content: center;
+background-color: #e0e3eb;
 }
 
-.calculator{
-    width: 470px;
-    height: 680px;
-    background-color: #000;
+
+.container{
+   position: relative;
+   max-width: 300px;
+   width: 100%;
+    background-color: #fff;
     margin: 100px auto;
     border-radius: 15px;
-    padding: 10px;
+    padding: 10px 20px 20px;
     box-shadow:  rgba(0, 0, 0, 0.15) 0px 5px 15px 0px;;
 }
 
 .display{
-    color: #fff;
-    font-size: 70px;
-    text-align: end;
-    padding-top: 20px;
+    height: 80px;
+    width: 100%;
+    outline: none;
+    border: none;
+    font-size: 25px;
+    text-align: right;
+    margin-bottom: 10px;
+    color: #000e1a;
+    pointer-events: none;
 }
 
 .buttons{
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 10px;
 
 }
 
-.button{
+.buttons button{
+    padding: 10px;
+    border-radius: 6px;
     border: none;
-    border-radius: 50px;
-    color: #fff;
-    padding: 28px 30px;
-    width: 22%;
-    margin: 10px 6px;
-    font-size: 36px;
-    background-color: rgba(128, 128, 128, 0.372);
+    font-size: 20px;
+    background-color: #eee;
+    cursor: pointer;
 }
 
-.zero-btn{
-    padding: 30px 190px 26px 20px;
+.buttons button:active{
+    transform: scale(1.3);
 }
 
-.btn-orange{
-    background-color: #ffa500;
-}
-
-.btn-grey{
-    background-color: #808080;
+.operator{
+    color: #2f9fff;
 }
